# our-game-tbd

./: .gitignore  CMakeLists.txt  README
libs/SDL2-2.26.5/x86_64-w64-mingw32/lib/: lib - Shortcut.lnk
src/: character.cpp  character.h  main.cpp
src/NPC/: NPC.h  NPC1.cpp  meleeEnemy.cpp
src/background/: background.cpp  background.h
src/character/: character.cpp  character.h
src/level/: backgroundTile.cpp  backgroundTile.h  groundTile.cpp  groundTile.h  level.cpp  level.h  tile.cpp  tile.h
